--- a/index.html
+++ b/index.html
@@ -4,8 +4,51 @@
         <title>Home</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="homepage.css">
+        <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
     </head>
     <body>
+
+        <!-- Header contains website name on top left with a log in and sign up button on the top right-->
+        <header>
+
+            <!--Logo/website name-->
+            <div>
+                <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
+            </div>
+
+            <!--container for login/signup buttons-->
+            <div id="register-btns">
+                <div id="sign-up-div">
+                    <a href="#signup" class="link-black" id="sign-up-btn">Sign Up</a>
+                </div>
+                <div id="log-in-btn">
+                    <!-- <a href="#login" class="link-black">Log In</a> -->
+                    <a href="#login"><button type="button" class="blue-btn">Log In</button></a>
+                </div>
+            </div>
+
+        </header>
+
+
+        <section>
+            <div id="h1icon">
+                <i class="fa-solid fa-calendar-days fa-9x icon"></i>
+                <h1 id="home-heading">
+                    Scheduling made <br />
+                    hassle-free.
+                </h1>
+            </div>
+
+            <p class="tagline">
+                An all-in-one event planning system that makes it easy to create and join events, and manage your schedule.<br />
+                With Google Calendar integration, EventCal automatically identifies your available time so that you don't have to.
+            </p>
+            <p class="tagline">Click the button below to get started.</p>
+
+            <div id="get-started">
+                <a href="#signup"><button type="button" class="white-btn">Get Started</button></a>
+            </div>
+        </section>
 
     </body>
 </html>
