Modified home css and started user settings page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </div>
 
             <!--container for login/signup buttons-->
-            <div id="register-btns">
-                <div id="sign-up-div">
-                    <a href="#signup" class="link-black" id="sign-up-btn">Sign Up</a>
+            <div class="top-right-menu">
+                <div class="menu-div">
+                    <a href="#signup" class="link-black menu-btn">Sign Up</a>
                 </div>
-                <div id="log-in-btn">
+                <div>
                     <!-- <a href="#login" class="link-black">Log In</a> -->
                     <a href="#login"><button type="button" class="blue-btn">Log In</button></a>
                 </div>
