Fixed sidebar and content body

--- a/user-account.html
+++ b/user-account.html
@@ -36,19 +36,37 @@
         </header>
         <hr />
 
-        <!-- sidebar menu to show overview of the different settings -->
-        <div class="sidebar">
-            <!--Account Settings-->
-            <div class="icon-menu">
-                <i class="fa-solid fa-user fa-2x icon-menu-padding"></i>
-                <a href="user-account.html" class="current-page link-black">Account Settings</a>
-            </div>
-            <!--Calendar Settings-->
-            <div class="icon-menu">
-                <i class="fa-solid fa-calendar-days fa-2x icon-menu-padding"></i>
-                <a href="#calendar-settings" class="link-black">Calendar Settings</a>
+        <div class="content-section">
+
+                <div class="main-container">
+
+                <!-- sidebar menu to show overview of the different settings -->
+                <!-- <aside class="sidebar">
+
+                    <div class="icon-menu">
+                        <i class="fa-solid fa-user fa-2x icon-menu-padding"></i>
+                        <a href="user-account.html" class="current-page link-black">Account Settings</a>
+                    </div>
+
+                    <div class="icon-menu">
+                        <i class="fa-solid fa-calendar-days fa-2x icon-menu-padding"></i>
+                        <a href="#calendar-settings" class="link-black">Calendar Settings</a>
+                    </div>
+                </aside> -->
+
+                <aside class="sidebar">
+                    <a href="user-account.html" class="current-page"><i class="fa-solid fa-user fa-2x"></i> Account Settings</a>
+                    <a href="#calendar-settings"><i class="fa-solid fa-calendar-days fa-2x icon-menu-padding"></i> Calendar Settings</a>
+                </aside>
+
+                <div class="main-body">
+                    <h1>Account Settings</h1>
+                </div>
+
             </div>
         </div>
-        <h2 class="content-with-menu">Account Settings</h2>
+
+
+
     </body>
 </html>
