--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Home</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="homepage.css">
+        <link rel="stylesheet" href="template.css">
         <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
     </head>
     <body>
