Wed, May 11, 2022, 10:19 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -5,21 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Dashboard.css" />
+    <link rel="stylesheet" type="text/css" href="template.css" />
     <title>Dashboard</title>
 </head>
 <body>
     <div class="main"> <!-- MAIN DIV-->
                 <!-- DIV NAV-->
-                <div class="header">
-                    <h1>EventCalendar</h1>
-                    <nav>
-                        <ul class="nav">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Portfolio</a></li>
-                        </ul>
-                    </nav>
-                </div>
 
                 <!-- Page content -->
                 <div class="content">
