--- a/Dashboard.html
+++ b/Dashboard.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="Dashboard.css" />
     <link rel="stylesheet" type="text/css" href="template.css" />
     <title>Dashboard</title>
