Wed, May 11, 2022, 10:38 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -40,7 +40,7 @@
 <div class="content">
     <h1> Dashboard </h1>
     <div class="buttons">
-        <button> Create Event </button>
+        <button type="button"> Create Event </button>
         <button> Join Event </button>
     </div>
 
