--- a/Dashboard.html
+++ b/Dashboard.html
@@ -40,7 +40,7 @@
 <div class="content">
     <h1> Dashboard </h1>
     <div class="buttons">
-        <button type="button"> Create Event </button>
+        <button type="button"><i class="fa-solid fa-plus"></i> Create Event </button>
         <button> Join Event </button>
     </div>
 
