--- a/Dashboard.html
+++ b/Dashboard.html
@@ -54,12 +54,12 @@
         <div id="events">
             <div class="event">
                 <div class="dateTime">
-                    <p class="date"> 09/24 </p>
+                    <p class="date"><i class="fa-solid fa-calendar"></i> 09/24 </p>
                     <p class="time"> 5:13pm </p>
                 </div>
                 <div class="nameLocale">
                     <h3 class="eventName"> Tennis Squad </h3>
-                    <p class="eventLocation"> Adelaide, Australia </p>
+                    <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> Adelaide, Australia </p>
                 </div>
             </div>
         </div>
