Wed, May 11, 2022, 10:44 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -55,7 +55,7 @@
             <div class="event">
                 <div class="dateTime">
                     <p class="date"><i class="fa-solid fa-calendar"></i> 09/24 </p>
-                    <p class="time"> 5:13pm </p>
+                    <p class="time"><i class="fa-solid fa-clock"></i> 5:13pm </p>
                 </div>
                 <div class="nameLocale">
                     <h3 class="eventName"> Tennis Squad </h3>
