Wed, May 11, 2022, 10:49 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -62,6 +62,16 @@
                     <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> Adelaide, Australia </p>
                 </div>
             </div>
+            <div class="event">
+                <div class="dateTime">
+                    <p class="date"><i class="fa-solid fa-calendar"></i> 09/24 </p>
+                    <p class="time"><i class="fa-solid fa-clock"></i> 5:13pm </p>
+                </div>
+                <div class="nameLocale">
+                    <h3 class="eventName"> Birthday Catchup </h3>
+                    <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> 366 Main Road, Adelaide </p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
