Wed, May 11, 2022, 11:00 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -52,6 +52,7 @@
 
         <!-- Events container -->
         <div id="events">
+            <input type="text" id="dashboardSearch" name="search"><br><br>
             <div class="event">
                 <div class="dateTime">
                     <p class="date"><i class="fa-solid fa-calendar"></i> 09/24 </p>
