Wed, May 11, 2022, 11:17 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -52,7 +52,10 @@
 
         <!-- Events container -->
         <div id="events">
-            <input type="text" id="dashboardSearch" name="search"><br><br>
+            <div id="searchField">
+                <input type="text" id="dashboardSearch" name="search" placeholder="Find an event">
+            </div>
+            <br><br>
             <div class="event">
                 <div class="dateTime">
                     <p class="date"><i class="fa-solid fa-calendar"></i> 09/24 </p>
