Wed, May 11, 2022, 11:20 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -53,6 +53,7 @@
         <!-- Events container -->
         <div id="events">
             <div id="searchField">
+                <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" id="dashboardSearch" name="search" placeholder="Find an event">
             </div>
             <br><br>
