Wed, May 11, 2022, 11:33 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -55,6 +55,7 @@
             <div id="searchField">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" id="dashboardSearch" name="search" placeholder="Find an event">
+                <i class="fa-solid fa-sort"></i>
             </div>
             <br><br>
             <div class="event">
