--- a/Dashboard.html
+++ b/Dashboard.html
@@ -41,7 +41,7 @@
     <h1> Dashboard </h1>
     <div class="buttons">
         <button type="button"><i class="fa-solid fa-plus"></i> Create Event </button>
-        <button><i class="fa-solid fa-link"></i> Join Event </button>
+        <button type="button"><i class="fa-solid fa-link"></i> Join Event </button>
     </div>
 
     <!-- The dashboard itself-->
