Wed, May 11, 2022, 11:50 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -64,7 +64,7 @@
                     <p class="time"><i class="fa-solid fa-clock"></i> 5:13pm </p>
                 </div>
                 <div class="nameLocale">
-                    <h3 class="eventName"><a> Tennis Squad </a></h3>
+                    <h3 class="eventName"><a href="user-account.html"> Tennis Squad </a></h3>
                     <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> Adelaide, Australia </p>
                 </div>
             </div>
