--- a/Dashboard.html
+++ b/Dashboard.html
@@ -74,7 +74,7 @@
                     <p class="time"><i class="fa-solid fa-clock"></i> 5:13pm </p>
                 </div>
                 <div class="nameLocale">
-                    <h3 class="eventName"> Birthday Catchup </h3>
+                    <h3 class="eventName"><a href="user-account.html"> Birthday Catchup </a></h3>
                     <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> 366 Main Road, Adelaide </p>
                 </div>
             </div>
