Wed, May 11, 2022, 11:56 AM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -78,6 +78,7 @@
                     <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> 366 Main Road, Adelaide </p>
                 </div>
             </div>
+            <p id="viewMore"><a href="Dashboard.html"> View More </a></p>
         </div>
     </div>
 </div>
