--- a/Dashboard.html
+++ b/Dashboard.html
@@ -64,7 +64,7 @@
                     <p class="time"><i class="fa-solid fa-clock"></i> 5:13pm </p>
                 </div>
                 <div class="nameLocale">
-                    <h3 class="eventName"><a href="user-account.html"> Tennis Squad </a></h3>
+                    <h3 class="eventName"><a href="Dashboard.html"> Tennis Squad </a></h3>
                     <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> Adelaide, Australia </p>
                 </div>
             </div>
@@ -74,11 +74,11 @@
                     <p class="time"><i class="fa-solid fa-clock"></i> 5:13pm </p>
                 </div>
                 <div class="nameLocale">
-                    <h3 class="eventName"><a href="user-account.html"> Birthday Catchup </a></h3>
+                    <h3 class="eventName"><a href="Dashboard.html"> Birthday Catchup </a></h3>
                     <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> 366 Main Road, Adelaide </p>
                 </div>
             </div>
-            <p id="viewMore"><a href="Dashboard.html"> View More </a></p>
+            <p id="viewMore"><a href="Dashboard.html"> View More <i class="fa-solid fa-caret-down"></i></a></p>
         </div>
     </div>
 </div>
