--- a/Dashboard.html
+++ b/Dashboard.html
@@ -55,7 +55,7 @@
             <div id="searchField">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" id="dashboardSearch" name="search" placeholder="Find an event">
-                <i class="fa-solid fa-sort"></i>
+                <i class="fa-solid fa-filter"></i>
             </div>
             <br><br>
             <div class="event">
