--- a/email-settings.html
+++ b/email-settings.html
@@ -44,7 +44,7 @@
                 <!-- Sidebar -->
                 <aside class="sidebar">
                     <a href="user-account.html"><i class="fa-solid fa-user fa-2x"></i> Account Settings</a>
-                    <a href="#calendar-settings" class="current-page"><i class="fa-solid fa-calendar-days fa-2x icon-menu-padding"></i> Email Settings</a>
+                    <a href="#calendar-settings" class="current-page"><i class="fa-solid fa-envelope fa-2x"></i> Email Settings</a>
                 </aside>
 
                 <!--Content besides sidebar-->
