--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Home</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="homepage.css">
-        <link rel="stylesheet" href="template.css">
+        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="buttons.css">
         <script src="https://kit.fontawesome.com/2dc2f1fbdb.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -47,7 +48,7 @@
             <p class="tagline">Click the button below to get started.</p>
 
             <div id="get-started">
-                <a href="#signup"><button type="button" class="white-btn">Get Started</button></a>
+                <a href="#signup"><button type="button" class="big-white-btn">Get Started</button></a>
             </div>
         </section>
 
