Wed, May 11, 2022, 2:16 PM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -23,7 +23,7 @@
             <a href="#user-dashboard" class="link-black menu-btn">Home</a>
         </div>
         <div class="settings-dropdown">
-            <button type="button" class="blue-btn">Flindy
+            <button type="button" class="blue-btn">Jane Doe
                 <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
             </button>
             <!-- settings to be shown from dropdown menu -->
