--- a/Dashboard.html
+++ b/Dashboard.html
@@ -12,29 +12,33 @@
 </head>
 <body>
 <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
-<header>
-    <!--Logo/website name-->
-    <div>
-        <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
-    </div>
-    <!--container for links to Home and Profile settings-->
-    <div class="top-right-menu">
-        <div class="menu-div">
-            <a href="#user-dashboard" class="link-black menu-btn">Home</a>
-        </div>
-        <div class="settings-dropdown">
-            <button type="button" class="blue-btn">Jane Doe
-                <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
-            </button>
-            <!-- settings to be shown from dropdown menu -->
-            <div class="settings">
-                <a href="user-account.html" class="link-black">Account Settings</a>
-                <a href="calendar-settings.html" class="link-black">Calendar Settings</a>
+        <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
+        <header>
+
+            <!--Logo/website name-->
+            <div>
+                <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
             </div>
-        </div>
-    </div>
-</header>
-<hr />
+
+            <!--container for links to Home and Profile settings-->
+            <div class="top-right-menu">
+                <div class="menu-div">
+                    <a href="#user-dashboard" class="link-black menu-btn">Home</a>
+                </div>
+                <div class="settings-dropdown">
+                    <button type="button" class="blue-btn">Jane Doe
+                        <i class="fa fa-caret-down"></i> <!-- shows dropdown icon -->
+                    </button>
+                    <!-- settings to be shown from dropdown menu -->
+                    <div class="settings">
+                        <a href="user-account.html" class="link-black">Account Settings</a>
+                        <a href="email-settings.html" class="link-black">Email Settings</a>
+                    </div>
+                </div>
+            </div>
+
+        </header>
+        <hr />
 
         <!-- Page content -->
 <div class="content">
