Added buttons.css to dashboard

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="Dashboard.css" />
     <link rel="stylesheet" type="text/css" href="template.css" />
     <link rel="stylesheet" type="text/css" href="user-account.css" />
+    <link rel="stylesheet" type="text/css" href="buttons.css" />
     <title>Dashboard</title>
 </head>
 <body>
