Wed, May 11, 2022, 2:27 PM +00:00

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -44,6 +44,7 @@
         <!-- Page content -->
 <div class="content">
     <h1> Dashboard </h1>
+    <!-- Create & Join Event Buttons -->
     <div class="buttons">
         <button type="button"><i class="fa-solid fa-plus"></i> Create Event </button>
         <button type="button"><i class="fa-solid fa-link"></i> Join Event </button>
@@ -63,6 +64,7 @@
                 <i class="fa-solid fa-filter"></i>
             </div>
             <br><br>
+            <!-- Individual Events -->
             <div class="event">
                 <div class="dateTime">
                     <p class="date"><i class="fa-solid fa-calendar"></i> 09/24 </p>
@@ -83,6 +85,7 @@
                     <p class="eventLocation"> <i class="fa-solid fa-location-pin"></i> 366 Main Road, Adelaide </p>
                 </div>
             </div>
+            <!-- View More Button -->
             <p id="viewMore"><a href="Dashboard.html"> View More <i class="fa-solid fa-caret-down"></i></a></p>
         </div>
     </div>
