Fri, May 13, 2022, 2:43 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -12,8 +12,7 @@
     <title>Dashboard</title>
 </head>
 <body>
-<!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
-        <!--Header contains logo on top left, link to user dashboard and profile picture on top right-->
+        <!-- HEADER -->
         <header>
 
             <!--Logo/website name-->
@@ -40,5 +39,10 @@
 
         </header>
         <hr />
+
+        <!-- Sidebar -->
+        <div id="sidebar">
+            Hello
+        </div>
 </body>
 </html>
