Fri, May 13, 2022, 2:49 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -42,7 +42,7 @@
 
         <!-- Sidebar -->
         <div id="sidebar">
-            Hello
+            <h1 id="adminDashboard"> Admin Dashboard </h1>
         </div>
 </body>
 </html>
