Fri, May 13, 2022, 2:50 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -38,7 +38,7 @@
             </div>
 
         </header>
-        <hr />
+        <hr id="menu-spacer"  />
 
         <!-- Sidebar -->
         <div id="sidebar">
