Fri, May 13, 2022, 2:54 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -43,6 +43,10 @@
         <!-- Sidebar -->
         <div id="sidebar">
             <h1 id="adminDashboard"> Admin Dashboard </h1>
+            <div id="dashboardCatagories">
+                <button><i></i></button>
+
+            </div>
         </div>
 </body>
 </html>
