Fri, May 13, 2022, 3:00 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -44,7 +44,8 @@
         <div id="sidebar">
             <h1 id="adminDashboard"> Admin Dashboard </h1>
             <div id="dashboardCatagories">
-                <button><i></i></button>
+                <button><i class="fa-solid fa-user"></i>Users</button>
+                <button><i></i>Events</button>
 
             </div>
         </div>
