Fri, May 13, 2022, 3:06 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -45,7 +45,7 @@
             <h1 id="adminDashboard"> Admin Dashboard </h1>
             <div id="dashboardCatagories">
                 <button><i class="fa-solid fa-user"></i>Users</button>
-                <button><i></i>Events</button>
+                <button><i class="fa-solid fa-flag"></i>Events</button>
 
             </div>
         </div>
