Fri, May 13, 2022, 3:13 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -50,5 +50,11 @@
 
             </div>
         </div>
+
+        <!-- Section Information -->
+        <div id="adminSection">
+            <h1> Section </h1>
+        </div>
+
 </body>
 </html>
