Fri, May 13, 2022, 4:18 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="template.css" />
     <link rel="stylesheet" type="text/css" href="user-account.css" />
     <link rel="stylesheet" type="text/css" href="buttons.css" />
-    <title>Dashboard</title>
+    <title>Admin Dashboard</title>
 </head>
 <body>
         <!-- HEADER -->
@@ -54,6 +54,7 @@
         <!-- Section Information -->
         <div id="adminSection">
             <h1> Section </h1>
+            <input type="text" id="dashboardSearch" name="search" placeholder="Find an event">
         </div>
 
 </body>
