Fri, May 13, 2022, 4:21 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -14,7 +14,6 @@
 <body>
         <!-- HEADER -->
         <header>
-
             <!--Logo/website name-->
             <div>
                 <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
@@ -36,10 +35,10 @@
                     </div>
                 </div>
             </div>
-
         </header>
         <hr id="menu-spacer"  />
 
+        <!-- Sidebar -->
         <!-- Sidebar -->
         <div id="sidebar">
             <h1 id="adminDashboard"> Admin Dashboard </h1>
@@ -54,7 +53,7 @@
         <!-- Section Information -->
         <div id="adminSection">
             <h1> Section </h1>
-            <input type="text" id="dashboardSearch" name="search" placeholder="Find an event">
+            <input type="text" id="adminDashboardSearch" name="adminSearch" placeholder="Search... ">
         </div>
 
 </body>
