--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -52,7 +52,7 @@
 
         <!-- Section Information -->
         <div id="adminSection">
-            <h1> Section </h1>
+            <h1> Users </h1>
             <input type="text" id="adminDashboardSearch" name="adminSearch" placeholder="Search... ">
         </div>
 
