--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -55,6 +55,9 @@
             <h1> Users </h1>
             <input type="text" id="adminDashboardSearch" name="adminSearch" placeholder="Search... ">
         </div>
+        <div id="FilterOptions">
+
+        </div>
 
 </body>
 </html>
