Fri, May 13, 2022, 4:33 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -56,7 +56,9 @@
             <input type="text" id="adminDashboardSearch" name="adminSearch" placeholder="Search... ">
         </div>
         <div id="FilterOptions">
-
+            <button> All Users </button>
+            <button> System Administrators </button>
+            <button> Add User </button>
         </div>
 
 </body>
