--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -54,7 +54,10 @@
         <div id="adminSection">
             <h1> Users </h1>
             <button> Add User </button>
-            <input type="text" id="adminDashboardSearch" name="adminSearch" placeholder="Search... ">
+            <div id="adminDashboardSearch">
+                <input type="text" name="adminSearch" placeholder="Search... ">
+            </div>
+
         </div>
         <div id="FilterOptions">
             <button> All Users </button>
