Fri, May 13, 2022, 4:48 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -54,8 +54,9 @@
         <div id="adminSection">
             <h1> Users </h1>
             <button> Add User </button>
-            <div id="adminDashboardSearch">
-                <input type="text" name="adminSearch" placeholder="Search... ">
+            <div >
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input id="adminDashboardSearch" type="text" name="adminSearch" placeholder="Search... ">
             </div>
 
         </div>
