--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -56,7 +56,7 @@
             <button> Add User </button>
             <div id="searchField">
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input id="adminDashboardSearch" type="text" name="adminSearch" placeholder="Search... ">
+                <input type="text" id="adminDashboardSearch" name="search" placeholder="Search... ">
             </div>
 
         </div>
