--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -53,7 +53,10 @@
         <!-- Section Information -->
         <div id="adminSection">
             <h1> Users </h1>
-            <button> Add User </button>
+            <div class="BlueButton">
+                <button> Add User </button>
+            </div>
+
             <div id="searchField">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" id="adminDashboardSearch" name="search" placeholder="Search... ">
