--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -54,6 +54,7 @@
         <div id="adminSection">
             <h1> Users </h1>
             <div class="BlueButton">
+                <i class="fa-solid fa-plus"></i>
                 <button> Add User </button>
             </div>
 
