--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -54,8 +54,7 @@
         <div id="adminSection">
             <h1> Users </h1>
             <div class="BlueButton">
-                <i class="fa-solid fa-plus"></i>
-                <button> Add User </button>
+                <button><i class="fa-solid fa-plus"></i> Add User </button>
             </div>
 
             <div id="searchField">
