--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -53,9 +53,7 @@
         <!-- Section Information -->
         <div id="adminSection">
             <h1> Users </h1>
-            <div class="BlueButton">
-                <button><i class="fa-solid fa-plus"></i> Add User </button>
-            </div>
+            <button id="BlueButton"><i class="fa-solid fa-plus"></i> Add User </button>
 
             <div id="searchField">
                 <i class="fa-solid fa-magnifying-glass"></i>
