Fri, May 13, 2022, 6:09 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -66,7 +66,24 @@
             <button> System Administrators </button>
         </div>
 
+        <hr />
+
         <!-- Table containing Data  -->
+        <table>
+            <tr>
+                <th> ID </th>
+                <th> Name </th>
+                <th> Email </th>
+                <th> User Type </th>
+            </tr>
+            <tr>
+                <td>234234</td>
+                <td>Bob Dylan</td>
+                <td>email@email.com</td>
+                <td>User</td>
+            </tr>
+
+        </table>
 
 </body>
 </html>
