Fri, May 13, 2022, 6:17 AM +00:00

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -53,7 +53,7 @@
         <!-- Section Information -->
         <div id="adminSection">
             <h1> Users </h1>
-            <button id="BlueButton"><i class="fa-solid fa-plus"></i> Add User </button>
+            <!-- <button id="BlueButton"><i class="fa-solid fa-plus"></i> Add User </button> -->
 
             <div id="searchField">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -61,10 +61,10 @@
             </div>
 
         </div>
-        <div id="FilterOptions">
+        <!-- <div id="FilterOptions">
             <button> All Users </button>
             <button> System Administrators </button>
-        </div>
+        </div> -->
 
         <hr />
 
