Fri, May 13, 2022, 6:24 AM +00:00

--- a/add_event.html
+++ b/add_event.html
@@ -24,7 +24,7 @@
         <input type="date" ><br/>
     </form>
     <br/>
-    <input type="submit" id="form" value="Create event">
+    <input type="submit" value="Create event">
 </body>
 </html>
 
