Fri, May 13, 2022, 6:36 AM +00:00

--- a/add_event.html
+++ b/add_event.html
@@ -74,21 +74,21 @@
 
         <br/>
         <!-- Select time of event -->
-        <label id="label-select-time" for="appt">Select a time range:</label><br>
+        <label id="label-select-time">Select a time range:</label><br>
         <div class="time-div">
             <div>
-                <label for="time"> From: </label>
-                <input type="time" id="time" name="appt" value="09:00">
+                <label for="from-time"> From: </label>
+                <input type="time" id="from-time" value="09:00">
             </div>
             <div id="to-time-div">
-                <label for="time"> To: </label>
-                <input type="time" id="time" name="appt" value="17:00">
+                <label for="to-time"> To: </label>
+                <input type="time" id="to-time" value="17:00">
             </div>
         </div>
         <br><br>
 
         <!-- Create event -->
-        <input type="submit" id="form" value="Create event">
+        <input type="submit" value="Create event">
         <!-- Cancel button -->
         <button id="cancel-button"> Cancel </button>
 
