Fri, May 13, 2022, 6:40 AM +00:00

--- a/book_event_user.html
+++ b/book_event_user.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book your event</title>
 
-    <link rel="stylesheet" href="book_event.css">
+    <link rel="stylesheet" href="book_event_user.css">
     <link rel="stylesheet" href="template.css">
     <link rel="stylesheet" href="user-account.css">
     <link rel="stylesheet" href="buttons.css">
@@ -50,20 +50,20 @@
     <p id="event-name"> John's 25th Birthday Party </p>
 
     <!-- Location -->
-    <i class="fa-solid fa-location-dot"></i><p id="p"> 136 North Terrace, Adelaide 5000, Australia </p>
+    <i class="fa-solid fa-location-dot"></i><p class="p"> 136 North Terrace, Adelaide 5000, Australia </p>
 
     <!-- Date -->
-    <i class="fa fa-calendar" aria-hidden="true"></i><p id="p"> 15th June, 2022 </p>
+    <i class="fa fa-calendar" aria-hidden="true"></i><p class="p"> 15th June, 2022 </p>
 
     <!-- View available times -->
-    <b id="b"> Specify your availability for the day: </b> <br/><br/>
+    <b class="b"> Specify your availability for the day: </b> <br/><br/>
     <input type="checkbox"><label id="not-available">I am not available that day.</label><br/>
     <div>
-        <p id="checkbox"> Available times: </p>
+        <p class="checkbox"> Available times: </p>
         <!-- displays available times -->
         <div id="times">
-            <label id="checkbox"><input type="checkbox">08:00am - 02:00pm</label><br/>
-            <label id="checkbox"><input type="checkbox" >06:00pm - 10:00pm</label><br/>
+            <label class="checkbox"><input type="checkbox">08:00am - 02:00pm</label><br/>
+            <label class="checkbox"><input type="checkbox" >06:00pm - 10:00pm</label><br/>
         </div>
     </div>
 
