Fri, May 13, 2022, 10:14 AM +00:00

--- a/loginPage.html
+++ b/loginPage.html
@@ -12,6 +12,8 @@
 
     <body>
 
+        <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
+
         <h1 class="LoginToCont"><strong>LOGIN TO CONTINUE</strong></h1>
 
         <div class="LoginRectSection">
