--- a/signUpPage.html
+++ b/signUpPage.html
@@ -11,6 +11,7 @@
     </head>
 
     <body>
+        <a href="index.html" id="home-btn" class="link-black" title="Home">EventCal</a>
 
         <h1 class="signUp"><strong>SIGN UP TO CREATE AN ACCOUNT!</strong></h1>
 
