Validated html adn css files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Home</title>
         <meta charset="UTF-8">
@@ -24,8 +24,7 @@
                     <a href="#signup" class="link-black menu-btn">Sign Up</a>
                 </div>
                 <div>
-                    <!-- <a href="#login" class="link-black">Log In</a> -->
-                    <a href="#login"><button type="button" class="blue-btn">Log In</button></a>
+                    <button type="button" class="blue-btn">Log In</button>
                 </div>
             </div>
 
@@ -48,7 +47,7 @@
             <p class="tagline">Click the button below to get started.</p>
 
             <div id="get-started">
-                <a href="#signup"><button type="button" class="big-white-btn">Get Started</button></a>
+                <button type="button" class="big-white-btn">Get Started</button>
             </div>
         </section>
 
