--- a/searchPage.html
+++ b/searchPage.html
@@ -12,12 +12,12 @@
     </head>
 
     <body>
-    <form action="">
+    <form>
         <div class="searchInput">
-            <input id="eventName" type="text" placeholder="SEARCH FOR EVENTS..." required></input>
+            <input id="eventName" type="text" placeholder="SEARCH FOR EVENTS..." required>
         </div>
          <div class="search">
-            <button type="submit" value=<i class="fas fa-search"></i></button>
+            <button type="submit"><i class="fas fa-search"></i></button>
         </div>
     </form>
     </body>
