Fri, May 13, 2022, 11:43 AM +00:00

--- a/searchPage.html
+++ b/searchPage.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-    <form action="">
+    <form action="#">
         <div class="searchInput">
             <input id="eventName" type="text" placeholder="SEARCH FOR EVENTS..." required></input>
         </div>
