Fri, May 13, 2022, 11:50 AM +00:00

--- a/searchPage.html
+++ b/searchPage.html
@@ -17,7 +17,7 @@
             <input id="eventName" type="text" placeholder="SEARCH FOR EVENTS..." required></input>
         </div>
          <div class="search">
-            <button type="submit" value=<i class="fas fa-search"></i></button>
+            <button type="submit" value="<i class="fas fa-search"></i>"</button>
         </div>
     </form>
     </body>
