Fri, May 13, 2022, 11:51 AM +00:00

--- a/searchPage.html
+++ b/searchPage.html
@@ -14,10 +14,10 @@
     <body>
     <form action="#">
         <div class="searchInput">
-            <input id="eventName" type="text" placeholder="SEARCH FOR EVENTS..." required></input>
+            <input id="eventName" type="text" placeholder="SEARCH FOR EVENTS..." required</input>
         </div>
          <div class="search">
-            <button type="submit" value="<i class="fas fa-search"></i>"</button>
+            <button type="submit" value=<i class="fas fa-search"></i></button>
         </div>
     </form>
     </body>
