--- a/searchPage.html
+++ b/searchPage.html
@@ -14,7 +14,7 @@
     <body>
     <form action="#">
         <div class="searchInput">
-            <input id="eventName" type="text" placeholder="SEARCH FOR EVENTS..." required</input>
+            <input id="eventName" type="text" placeholder="SEARCH FOR EVENTS..."></input>
         </div>
          <div class="search">
             <button type="submit" value=<i class="fas fa-search"></i></button>
